Fixed issue where size was not being passed through to callbacks.